syntax = "proto3";

enum PresenceState {
  Offline = 0;
  Online = 1;
}